// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "ensureNonZero",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "float",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "ensureNonZero",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 9,
  },
]
`;

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "ensureNonZero",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "ensureNonZero",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 9,
  },
]
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
